Add Type Adapter in Todo Model and generate with hive_generator and build_runner, Change Navigation with toNamed routing and bundling data with arguments, Refactor CreateUpdateTodoView to StatelessWidget, Save data to local storage with Hive.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   get: ^4.7.2
-  hive_ce_flutter: ^2.3.1
-  hive_ce_generator: ^1.9.2
-  build_runner: ^2.5.4
   intl: ^0.20.2
+  hive_ce: ^2.11.3
+  hive_ce_flutter: ^2.3.1
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +49,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.5.4
+  hive_ce_generator: ^1.9.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
